--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.9.5",
     "@aws-sdk/client-cognito-identity-provider": "^3.777.0",
-    "@aws-sdk/client-dynamodb": "^3.774.0",
+    "@aws-sdk/client-dynamodb": "^3.786.0",
+    "@aws-sdk/lib-dynamodb": "^3.786.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
